--- a/locale/es_ES/locale.xml
+++ b/locale/es_ES/locale.xml
@@ -167,6 +167,7 @@
 	<message key="submissions.queuedReview">En revisión</message>
 	<message key="submissions.scheduled">Planificado</message>
 	<message key="submissions.published">Publicado</message>
+	<message key="submissions.sidisiId">Código SIDISI</message><!-- [UPCH] -->
 	<message key="submissions.initial">Inicial</message>
 	<message key="submissions.proofread">Corregir pruebas</message>
 	<message key="submissions.initialProof">Prueba inicial</message>
