--- a/locale/es_ES/admin.xml
+++ b/locale/es_ES/admin.xml
@@ -12,19 +12,19 @@
   -->
 
 <locale name="es_ES" full_name="Español (España)">
-	<message key="admin.hostedJournals">Revistas alojadas</message>
-	<message key="admin.settings.journalRedirect">Redirigir revista</message>
+	<!--[UPCH]--><message key="admin.hostedJournals">Unidades alojadas</message>
+	<!--[UPCH]--><message key="admin.settings.journalRedirect">Redirigir Unidad</message>
 	<message key="admin.settings.options">Opciones</message>
-	<message key="admin.settings.journalRedirectInstructions">Las solicitudes para acceder al sitio principal se redirigirán a esta revista. Esto puede resultarle útil si el sitio sólo aloja una revista, por ejemplo.</message>
+	<!--[UPCH]--><message key="admin.settings.journalRedirectInstructions">Las solicitudes para acceder al sitio principal se redirigirán a esta Unidad. Esto puede resultarle útil si el sitio sólo aloja una unidad, por ejemplo.</message>
 	<message key="admin.settings.noJournalRedirect">No redirigir</message>
 	<message key="admin.settings.defaultMetricDescription">
 		Su instalación de OJS está configurada para registrar más de una métrica de uso. Las estadísticas de uso se mostrarán en varios contextos. En algunos casos se debe utilizar una sola estadística de uso, p. ej. para mostrar una lista ordenada de los artículos más consultados o para clasificar los resultados de búsqueda. Seleccione una de las métricas configuradas como predeterminada.
 	</message>
-	<message key="admin.languages.primaryLocaleInstructions">Éste será el idioma predeterminado para el sitio y para todas las revistas que aloje.</message>
-	<message key="admin.languages.supportedLocalesInstructions">Seleccione todas las configuraciones regionales que serán compatibles con el sitio. Las configuraciones regionales seleccionadas estarán disponibles para todas las revistas alojadas en el sitio y también aparecerán en el menú de selección de idioma en cada página del sitio (puede ser anulado en páginas específicas de las revistas). Si no ha seleccionado más de una configuración regional, el menú de selección no aparecerá y la configuración extendida de idioma no estará disponible para las revistas.</message>
+	<!--[UPCH]--><message key="admin.languages.primaryLocaleInstructions">Éste será el idioma predeterminado para el sitio y para todas las unidades que aloje.</message>
+	<!--[UPCH]--><message key="admin.languages.supportedLocalesInstructions">Seleccione todas las configuraciones regionales que serán compatibles con el sitio. Las configuraciones regionales seleccionadas estarán disponibles para todas las unidades alojadas en el sitio y también aparecerán en el menú de selección de idioma en cada página del sitio (puede ser anulado en páginas específicas de las unidades). Si no ha seleccionado más de una configuración regional, el menú de selección no aparecerá y la configuración extendida de idioma no estará disponible para las unidades.</message>
 	<message key="admin.locale.maybeIncomplete">Las configuraciones regionales marcadas pueden estar incompletas.</message>
-	<message key="admin.languages.confirmUninstall">¿Está seguro/a de que desea desinstalar esta configuración regional? Esto puede afectar a cualquier revista alojada que esté utilizando actualmente dicha configuración regional.</message>
-	<message key="admin.languages.installNewLocalesInstructions">Seleccione cualquier configuración regional adicional para instalar su soporte en este sistema. Debe instalar las configuraciones regionales antes de que otras revistas alojadas puedan utilizarlas. Vea la documentación de OJS para obtener más información o para añadir soporte para nuevos idiomas.</message>
+	<!--[UPCH]--><message key="admin.languages.confirmUninstall">¿Está seguro/a de que desea desinstalar esta configuración regional? Esto puede afectar a cualquier Unidad alojada que esté utilizando actualmente dicha configuración regional.</message>
+	<!--[UPCH]--><message key="admin.languages.installNewLocalesInstructions">Seleccione cualquier configuración regional adicional para instalar su soporte en este sistema. Debe instalar las configuraciones regionales antes de que otras unidades alojadas puedan utilizarlas. Vea la documentación de OJS para obtener más información o para añadir soporte para nuevos idiomas.</message>
 	<message key="admin.languages.downloadFailed">Fallo en la descarga de configuraciones regionales. El siguiente mensaje/s de error describe el fallo.</message>
 	<message key="admin.languages.localeInstalled">La configuración regional "{$locale}" se instaló.</message>
 	<message key="admin.languages.download">Descargar configuración regional</message>
@@ -37,18 +37,18 @@
 	<message key="admin.systemVersion">Versión de OJS</message>
 	<message key="admin.systemConfiguration">Configuración de OJS</message>
 	<message key="admin.systemConfigurationDescription"><![CDATA[Configuración de OJS de <tt>config.inc.php</tt>.]]></message>
-	<message key="admin.journals.journalSettings">Configuración de la revista</message>
-	<message key="admin.journals.noneCreated">No se han creado revistas.</message>
-	<message key="admin.contexts.confirmDelete">¿Está seguro/a de que desea eliminar esta revista y todos sus contenidos de forma permanente?</message>
-	<message key="admin.contexts.create">Crear revista</message>
-	<message key="admin.journals.createInstructions">Se le asignará de forma automática el rol de gestor/a de la revista. Tras crear una nueva revista, acceda a ella como gestor/a para continuar con la configuración y el registro de usuarios/as.</message>
-	<message key="admin.journals.urlWillBe">Este elemento debe ser una palabra corta o acrónimo para identificar la revista. La dirección URL de la revista será {$sampleUrl}</message>
+	<!--[UPCH]--><message key="admin.journals.journalSettings">Configuración de la Unidad</message>
+	<!--[UPCH]--><message key="admin.journals.noneCreated">No se han creado unidades.</message>
+	<!--[UPCH]--><message key="admin.contexts.confirmDelete">¿Está seguro/a de que desea eliminar esta Unidad y todos sus contenidos de forma permanente?</message>
+	<!--[UPCH]--><message key="admin.contexts.create">Crear Unidad</message>
+	<!--[UPCH]--><message key="admin.journals.createInstructions">Se le asignará de forma automática el rol de gestor/a de la revista. Tras crear una nueva Unidad, acceda a ella como gestor/a para continuar con la configuración y el registro de usuarios/as.</message>
+	<!--[UPCH]--><message key="admin.journals.urlWillBe">Este elemento debe ser una palabra corta o acrónimo para identificar la Unidad. La dirección URL de la Unidad será {$sampleUrl}</message>
 	<message key="admin.contexts.form.pathRequired">Inserte una ruta.</message>
 	<message key="admin.contexts.form.pathAlphaNumeric">La ruta sólo puede contener caracteres alfanuméricos, guiones y guiones bajos, y debe empezar y terminar con un carácter alfanumérico.</message>
-	<message key="admin.contexts.form.pathExists">La ruta seleccionada ya está siendo utilizada por otra revista.</message>
-	<message key="admin.journals.enableJournalInstructions">Habilitar esta revista para que aparezca de forma pública en el sitio</message>
-	<message key="admin.journals.journalDescription">Descripción de la revista</message>
-	<message key="admin.journal.pathImportInstructions">Ruta actual de la revista o ruta que se desea crear (p. ej. "ojs").</message>
+	<!--[UPCH]--><message key="admin.contexts.form.pathExists">La ruta seleccionada ya está siendo utilizada por otra Unidad.</message>
+	<!--[UPCH]--><message key="admin.journals.enableJournalInstructions">Habilitar esta Unidad para que aparezca de forma pública en el sitio</message>
+	<!--[UPCH]--><message key="admin.journals.journalDescription">Descripción de la Unidad</message>
+	<!--[UPCH]--><message key="admin.journal.pathImportInstructions">Ruta actual de la Unidad o ruta que se desea crear (p. ej. "ojs").</message>
 	<message key="admin.journals.importSubscriptions">Importar suscripciones</message>
 	<message key="admin.journals.transcode">Transcodificar metadatos de artículos de ISO8859-1</message>
 	<message key="admin.journals.redirect">Generar código para asignar direcciones URL OJS 1 a URL OJS 2</message>
@@ -64,9 +64,9 @@
 
 	<!-- Categories -->
 	<message key="admin.categories">Categorías</message>
-	<message key="admin.categories.enable.description">El administrador/a del sitio puede definir un conjunto de categorías para organizar grandes conjuntos de revistas. Los gestores/as de revista pueden seleccionar varias de estas categorías para cada revista, y los lectores/as podrán examinar las colecciones de revistas por categorías.</message>
-	<message key="admin.categories.disableCategories">No organizar las revistas por categorías.</message>
-	<message key="admin.categories.enableCategories">Permitir a los gestores/as de revista organizar las revistas por categorías.</message>
+	<!--[UPCH]--><message key="admin.categories.enable.description">El administrador/a del sitio puede definir un conjunto de categorías para organizar grandes conjuntos de unidades. Los gestores/as de revista pueden seleccionar varias de estas categorías para cada Unidad, y los lectores/as podrán examinar las colecciones de unidades por categorías.</message>
+	<!--[UPCH]--><message key="admin.categories.disableCategories">No organizar las unidades por categorías.</message>
+	<!--[UPCH]--><message key="admin.categories.enableCategories">Permitir a los gestores/as de revista organizar las unidades por categorías.</message>
 	<message key="admin.categories.editTitle">Editar categoría</message>
 	<message key="admin.categories.createTitle">Crear categoría</message>
 	<message key="admin.categories.create">Crear categoría nueva</message>
@@ -76,7 +76,7 @@
 	<message key="admin.categories.nameRequired">Se requiere un nombre para la categoría.</message>
 
 
-	<message key="admin.languages.confirmDisable">¿Está seguro de que desea desactivar esta configuración regional? Esto puede afectar a las revistas alojadas que actualmente usan esta configuración regional.</message>
+	<!--[UPCH]--><message key="admin.languages.confirmDisable">¿Está seguro de que desea desactivar esta configuración regional? Esto puede afectar a las unidades alojadas que actualmente usan esta configuración regional.</message>
 	<message key="admin.languages.downloadUnavailable"><![CDATA[<p>La descarga de paquetes de lenguaje desde el servidor web de Public Knowledge Project no está disponible en este momento porque:</p>
 	<ul>
 		<li>Su servidor no dispone o no permite la ejecución de la utilidad GNU "tar".</li>
@@ -84,7 +84,7 @@
 	</ul>
 <p>Los paquetes de lenguaje se pueden descargar manualmente desde la página web de PKP <a href="https://pkp.sfu.ca"></a>.</p>]]></message>
 	<message key="admin.contexts.form.titleRequired">Se necesita un título.</message>
-	<message key="admin.presses.createInstructions">Usted será registrado automáticamente como administrador de esta revista. Tras la creación de la nueva revista será redireccionado al asistente de instalación para completar la configuración inicial de la revista.</message>
+	<!--[UPCH]--><message key="admin.presses.createInstructions">Usted será registrado automáticamente como administrador de esta Unidad. Tras la creación de la nueva Unidad será redireccionado al asistente de instalación para completar la configuración inicial de la Unidad.</message>
 	<message key="admin.scheduledTask.subscriptionExpiryReminder">Recordatorio de caducidad de la suscripción</message>
 	<message key="admin.scheduledTask.openAccessNotification">Notificación de acceso abierto</message>
 	<message key="admin.scheduledTask.reviewReminder">Recordatorio de revisión</message>
